# mesohops

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pytest.ini  setup.py
docs/source/: basis.rst  conf.py  index.rst  intro.md  noise.rst  rec.txt  requirements.txt  traj.rst
mesohops/dynamics/: basis_functions.py  basis_functions_adaptive.py  bath_corr_functions.py  dyadic_spectra.py  eom_functions.py  eom_hops_ksuper.py  hierarchy_functions.py  hops_aux.py  hops_basis.py  hops_dyadic.py  hops_eom.py  hops_fluxfilters.py  hops_hierarchy.py  hops_modes.py  hops_noise.py  hops_storage.py  hops_system.py  hops_trajectory.py  integrator_rk.py  noise_fft.py  noise_trajectories.py  noise_zero.py  prepare_functions.py  storage_functions.py
mesohops/integrated_tests/: test_LTC_eom.py
mesohops/testing/: dimer_of_dimers_time.npy  hops_basis_noise_2site.npy  pre_calculated_uncorrelated_noise_test.npy  pyhops_testing_noise_v0.npy  test_adap_basis.py  test_basis_functions.py  test_basis_functions_adaptive.py  test_bath_corr_functions.py  test_dimer_of_dimers.py  test_dyadic_spectra.py  test_eom_functions.py  test_eom_hops_ksuper.py  test_hierarchyFunctions.py  test_hierarchy_class.py  test_hops_aux.py  test_hops_basis.py  test_hops_dyadic.py  test_hops_eom.py  test_hops_fluxfilters.py  test_hops_mode.py  test_hops_noise.py  test_hops_storage.py  test_hops_system.py  test_hops_trajectory.py  test_integrator_rk.py  test_low_temperature_correction.py  test_noiseFunctions.py  (+5 more)
tests/: dimer_of_dimers_noise.npy  dimer_of_dimers_traj.npy  hops_basis_noise_10site.npy  known_param_g.npy  known_param_w.npy  pre_calculated_correlated_noise_test.npy  pre_calculated_uncorrelated_noise_test.npy  pyhops_testing_noise.npy  store_step_test_traj.npy  test_adap_basis.py  test_basis_functions.py  test_basis_functions_adaptive.py  test_bath_corr_functions.py  test_checkpoint.py  test_dimer_of_dimers.py  test_dyadic_spectra.py  test_eom_functions.py  test_eom_hops_ksuper.py  test_git_utils.py  test_helper_functions.py  test_hierarchyFunctions.py  test_hierarchy_class.py  test_hops_aux.py  test_hops_basis.py  test_hops_dyadic.py  test_hops_eom.py  test_hops_fluxfilters.py  test_hops_mode.py  test_hops_noise.py  test_hops_storage.py  test_hops_system.py  test_hops_trajectory.py  test_integrator_rk.py  test_low_temperature_correction.py  test_noise_fft.py  test_noise_precalculated.py  test_noise_trajectories.py  test_noise_zero.py  test_timing_tests.py  utils.py
(+65 files in other folders)
