[project]
name = "mesohops"
version = "1.6.0"
dependencies = [
  "numpy",
  "scipy",
  "numba",
  "pytest",
  "pytest-level",
  "pytest-cov"
]
requires-python = ">=3.12"
authors = [
  {name = "Leonel Varvelo", email = "leonel_varvelo@yahoo.com"},
  {name = "Jacob Lynd", email = "jacobklynd@gmail.com"},
  {name = "Brian Citty", email = "bcitty@utexas.edu"},
  {name = "Tarun Gera", email = "tgera@utexas.edu"},
  {name = "Alexia Hartzell", email = "alexiahartzell@utexas.edu"},
  {name = "Zach W. Freeman", email = "zachwfreeman@utexas.edu"},
  {name = "Mehtan Rahman", email = "mehtan.rahman@utexas.edu"},
  {name = "Chase Anstead", email = "canstead34@gmail.com"},
  {name = "Doran I. G. B. Raccah", email = "doran.raccah@utexas.edu"},
]
maintainers = [
  {name = "Doran I. G. B. Raccah", email = "doran.raccah@utexas.edu"}
]
description = "Python Distribution of (adaptive) Hierarchy of Pure States (HOPS)"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["open quantum systems", "mesoscale", "spectroscopy", "excited-state dynamics", "non-Markovian"]
classifiers = [
  "Development Status :: full release 1.6.0",
  "Programming Language :: Python"
]


[project.urls]
Homepage = "https://captainexasperated.github.io/Readthedocs-Tutorial/"
Repository = "https://github.com/MesoscienceLab/mesohops"
